compiler/testData/diagnostics/tests/annotations/JavaAnnotationConstructors.kt
import java.lang.annotation.*

annotation @java.lang.annotation.Retention(RetentionPolicy.CLASS) class my
annotation Retention(RetentionPolicy.RUNTIME) <!PLATFORM_CLASS_MAPPED_TO_KOTLIN!>Target<!>(ElementType.ANNOTATION_TYPE, ElementType.CONSTRUCTOR) class my1